fix overflowing text in subredditId

--- a/reddit_app/src/components/subredditPage/SubredditPage.css
+++ b/reddit_app/src/components/subredditPage/SubredditPage.css
@@ -17,7 +17,7 @@
 }
 
 #subredditName {
-  font-size: 30px;
+  font-size: clamp(1.2rem, 2.5vw, 2rem);
   font-weight: 600;
   margin-left: 10px;
 }
